--- a/coursework/mfc/templates/template.html
+++ b/coursework/mfc/templates/template.html
@@ -168,7 +168,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="{% url 'add-passport' %}" class="nav-link">
                         <svg class="nav-svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
