--- a/coursework/mfc/templates/registration/login.html
+++ b/coursework/mfc/templates/registration/login.html
@@ -96,7 +96,7 @@
 
 
     <div class="login-form">
-        <svg width="320" height="500" viewBox="0 0 320 500" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="main-svg" width="320" height="500" viewBox="0 0 320 500" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect width="320" height="500" fill="#F8FAFA" />
             <g filter="url(#filter0_i_33_238)">
                 <path d="M320 500H1V0L320 500Z" fill="#EA6C43" />
