--- a/coursework/mfc/templates/show-passport.html
+++ b/coursework/mfc/templates/show-passport.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% load static %}
-<!-- <link rel="stylesheet" href="{% static 'mfc/css/scss/pages-styles/show-certificate/show-certificate.css' %}" /> -->
+<link rel="stylesheet" href="{% static 'mfc/css/scss/pages-styles/show-passport/show-passport.css' %}" />
 
 
 <section class="passport">
