--- a/coursework/static/mfc/css/scss/blocks/_footer.scss
+++ b/coursework/static/mfc/css/scss/blocks/_footer.scss
@@ -8,8 +8,8 @@
     align-items: center;
     justify-content: space-evenly;
     //position: absolute;
-    //bottom: 0;
-    //width: 100%;
+    // bottom: 0;
+    width: 100%;
 }
 
 
