--- a/coursework/static/mfc/css/_general.scss
+++ b/coursework/static/mfc/css/_general.scss
@@ -9,6 +9,7 @@
 html {
   box-sizing: border-box;
   font-family: 'Montserrat';
+  min-height: 100%;
 }
 
 
@@ -36,9 +37,10 @@ html {
   
   body {
     margin: 0;
-    //position: relative;
-    //min-height: 115vh;
-  
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
   
   /**
