--- a/coursework/static/mfc/css/scss/blocks/_header.scss
+++ b/coursework/static/mfc/css/scss/blocks/_header.scss
@@ -9,6 +9,16 @@
     padding-right: 1.3rem;
     background-color: utils.$base-color-dark;
     height: 6rem;
+
+    @include utils.for-tablet-landscape-down {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        height: 12rem;
+    }
+    @include utils.for-phone-only{
+        height: 17rem;
+    }
 }
 
 .logo {
@@ -42,10 +52,17 @@
     display: flex;
     align-items: center;
     position: relative;
+    flex-wrap: wrap;
+    @include utils.for-phone-only {
+        flex-direction: column;
+    }
+    
 }
 
 .header__search {
     height: 4.4rem;
+    //max-width: 27.5rem;
+    //width: 100%;
     width: 27.5rem;
     border: 0;
     border-radius: 3px;
@@ -55,10 +72,12 @@
     font-weight: utils.$font-size-regular;
     margin-right: 1.7rem;
     padding-left: 0.8rem;
+    @include utils.for-phone-only {
+        width: 21.5rem;    
+    }
 }
 
 .magnifier-svg {
-    //position: absolute;
     right: 5.5rem;
     margin-bottom: -1rem;
     margin-left: -2rem;
@@ -90,6 +109,7 @@
     min-height: 9rem;
     background-color: utils.$light-gray;
     z-index: 10;
+    width: 100%;
 }
 
 .nav-item {
