--- a/coursework/static/mfc/css/scss/pages-styles/loginpage/_login-form.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/loginpage/_login-form.scss
@@ -3,34 +3,53 @@
 .login-form {
 
     @include utils.wrapper;
-
     margin-top: 14rem;
     margin-bottom: 14rem;
-
-
     background-color: utils.$base-color-modified;
     max-width: 80rem;
-    width: 100%;
     height: 50rem;
-
     display: flex;
+    overflow: hidden;
+    @include utils.for-tablet-landscape-down {
+        justify-content: center;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
 
 }
 
+.main-svg {
+    @include utils.for-tablet-landscape-down {
+        display: none;
+    }
+}
 
 .form {
     margin: 3.4rem;
     background-color: utils.$white-color;
     max-width: 41.2rem;
     width: 100%;
-
     border-radius: 3.1rem;
     padding-left: 2rem;
-
     display: flex;
     flex-direction: column;
     position: relative;
     overflow: hidden;
+    @include utils.for-tablet-landscape-down {
+        padding-right: 2rem;
+        margin: 0;
+        align-items: center;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        h1 {
+            text-align: center;
+            font-size: 4.2rem;
+        }
+        h2 {
+            text-align: center;
+            font-size: 2.7rem;
+        }
+    }
 }
 
 .form-wrapper {
@@ -41,7 +60,12 @@
     position: absolute;
     max-width: 36rem;
     width: 100%;
-/*
+
+    @include utils.for-tablet-landscape-down {
+        position: relative;
+    }
+
+    /*
     &--type-registration {
         transform: rotate(90deg);
         display: none;
@@ -84,21 +108,6 @@
 
 }
 
-input {
-    padding: 0;
-    padding-left: 4rem;
-    font-family: 'Poppins';
-    font-weight: utils.$font-size-regular;
-    font-size: 1.2rem;
-    border: 0;
-    border-radius: 0.5rem;
-    background-color: white;
-    max-width: 38rem;
-    width: 100%;
-    height: 3.3rem;
-    color: #203060;
-}
-
 .form__input--radio:checked {
     width: 5rem;
     background-color: utils.$orange-color;
@@ -122,8 +131,6 @@ input {
 }
 
 .form__submit-button {
-    max-width: 38rem;
-    width: 100%;
     border-radius: 0.5rem;
     border: 0;
     height: 3.3rem;
@@ -142,6 +149,8 @@ input {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    max-width: 36rem;
+    width: 100%;
 }
 
 .buttons-wrapper {
@@ -150,6 +159,11 @@ input {
     position: absolute;
     bottom: 2.5rem;
     width: 100%;
+    max-width: 36rem;
+    @include utils.for-tablet-landscape-down {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
 }
 
 .form__radio-text {
