--- a/coursework/mfc/templates/add-passport.html
+++ b/coursework/mfc/templates/add-passport.html
@@ -37,7 +37,7 @@
                 {{ form.branch }}
             </label>
             <label class="form__label" for="branch-number">
-                <p class="form__input-title">Отделение (6 цифр)</p>
+                <p class="form__input-title">Номер отделения (6 цифр)</p>
                 {{ form.branch_number }}
             </label>
             <label class="form__label" for="registration">
