--- a/coursework/static/mfc/css/scss/pages-styles/home/_main-article.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/home/_main-article.scss
@@ -29,6 +29,12 @@
     bottom: 8rem;
 }
 
+.main-article-edit {
+    position: absolute;
+    bottom: 6rem;
+}
+
+
 .article {
     transition: 0.5s;
     height: 37rem;
