--- a/coursework/static/mfc/css/scss/pages-styles/add-certificate/add-certificate.css
+++ b/coursework/static/mfc/css/scss/pages-styles/add-certificate/add-certificate.css
@@ -5,7 +5,7 @@
 }
 
 .certificates__form {
-  min-height: 75vh;
+  min-height: 80vh;
 }
 
 .certificates-wrapper {
@@ -13,23 +13,21 @@
   margin: 0 auto;
 }
 
-.certificate-name-wrapper {
+.certificate__text {
+  margin-right: 1rem;
+}
+
+.certificate__item {
+  max-width: 70rem;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+  margin-top: 1rem;
+  justify-content: center;
 }
 
 .certificate__name {
   margin-right: 1rem;
-}
-
-.certificate-department-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.certificate-date-wrapper {
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .certificates__title {
@@ -42,20 +40,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 1.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .certificate__submit {
   margin-top: 2rem;
   border-radius: 0.5rem;
-  background-color: white;
+  background-color: #EA6C43;
+  color: #F8FAFA;
   max-width: 25rem;
   width: 100%;
   border: 0;
   height: 3.3rem;
   transition: 0.5s;
-}
-
-.certificate__submit:hover {
-  background-color: #EA6C43;
-  color: #F8FAFA;
 }/*# sourceMappingURL=add-certificate.css.map */
