--- a/coursework/static/mfc/css/scss/pages-styles/add-passport/add-passport.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/add-passport/add-passport.scss
@@ -19,6 +19,7 @@
     padding-top: 3rem;
     padding-bottom: 2rem;
     background-color: utils.$light-gray;
+    margin-bottom: 8rem;
 }
 
 .form__inputs-wrapper {
@@ -32,7 +33,7 @@
     padding-left: 1.5rem;
     font-family: 'Poppins';
     font-weight: utils.$font-size-regular;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     border: 0;
     border-radius: 0.5rem;
     background-color: white;
@@ -46,6 +47,7 @@
     margin-top: 1rem;
     margin-bottom: 0.5rem;
     margin-left: 1rem;
+    font-size: 1.8rem;
 }
 
 .passport__submit {
