--- a/coursework/static/mfc/css/scss/pages-styles/edit-article/edit-article.css
+++ b/coursework/static/mfc/css/scss/pages-styles/edit-article/edit-article.css
@@ -1,3 +1,52 @@
+.form {
+  background-color: #FEF9F3;
+  margin-bottom: 8rem;
+}
+
+.edit-article {
+  max-width: 114rem;
+  margin: 0 auto;
+}
+
+.form__submit {
+  margin-top: 2rem;
+  border-radius: 0.5rem;
+  background-color: #EA6C43;
+  color: #F8FAFA;
+  max-width: 25rem;
+  width: 100%;
+  border: 0;
+  height: 3.3rem;
+  transition: 0.5s;
+}
+
+.edit-article__form-wrapper {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 11rem;
+  max-width: 144rem;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.form__fields {
+  list-style: none;
+}
+
+.form__item {
+  margin-top: 1.5rem;
+}
+
 .form__input {
-  max-width: 140rem;
+  padding: 0;
+  padding-left: 1.5rem;
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 1.8rem;
+  border: 0;
+  border-radius: 0.5rem;
+  background-color: white;
+  width: 100%;
+  height: 3.3rem;
+  color: #203060;
 }/*# sourceMappingURL=edit-article.css.map */
