--- a/coursework/static/mfc/css/scss/pages-styles/edit-article/edit-article.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/edit-article/edit-article.scss
@@ -1,6 +1,52 @@
 @use "../../utils";
 
+.form {
+    background-color: utils.$light-red;
+    margin-bottom: 8rem;
+}
+
+.edit-article {
+    @include utils.main-wrapper;
+}
+
+.form__submit {
+    margin-top: 2rem;
+    border-radius: 0.5rem;
+    background-color: utils.$orange-color;
+    color: utils.$white-color;
+    max-width: 25rem;
+    width: 100%;
+    border: 0;
+    height: 3.3rem;
+    transition: 0.5s;
+}
+
+.edit-article__form-wrapper {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-top: 11rem;
+    @include utils.wrapper;
+}
+
+
+.form__fields {
+    list-style: none;
+}
+
+.form__item {
+    margin-top: 1.5rem;
+}
+
 .form__input {
-    max-width: 140rem;
-    
+    padding: 0;
+    padding-left: 1.5rem;
+    font-family: 'Poppins';
+    font-weight: utils.$font-size-regular;
+    font-size: 1.8rem;
+    border: 0;
+    border-radius: 0.5rem;
+    background-color: white;
+    width: 100%;
+    height: 3.3rem;
+    color: #203060;
 }
