--- a/coursework/static/mfc/css/scss/pages-styles/home/home.css
+++ b/coursework/static/mfc/css/scss/pages-styles/home/home.css
@@ -31,6 +31,11 @@
   bottom: 8rem;
 }
 
+.main-article-edit {
+  position: absolute;
+  bottom: 6rem;
+}
+
 .article {
   transition: 0.5s;
   height: 37rem;
