--- a/coursework/static/mfc/css/scss/pages-styles/show-passport/show-passport.css
+++ b/coursework/static/mfc/css/scss/pages-styles/show-passport/show-passport.css
@@ -2,4 +2,36 @@
   max-width: 144rem;
   margin: 0 auto;
   width: 100%;
+}
+
+.passport-wrapper {
+  max-width: 114rem;
+  margin: 0 auto;
+  min-height: 72vh;
+  margin-top: 5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.passport__fields {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.passport__item {
+  display: flex;
+  max-width: 60rem;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 2rem;
+  font-size: 2rem;
+}
+
+.passport__item-title {
+  margin-right: 1rem;
+}
+
+.passport__title {
+  text-align: center;
 }/*# sourceMappingURL=show-passport.css.map */
