applications page and some more
3 types of users
application page
all services page

--- a/coursework/mfc/templates/certificates.html
+++ b/coursework/mfc/templates/certificates.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static "mfc/css/scss/pages-styles/certificates/certificates.css" %}" />
+<link rel="stylesheet" href="{% static 'mfc/css/scss/pages-styles/certificates/certificates.css' %}" />
 
 
 <section class="certificates">
