--- a/coursework/static/mfc/css/default.css
+++ b/coursework/static/mfc/css/default.css
@@ -481,6 +481,11 @@ html {
   color: #F8FAFA;
   font-size: 2rem;
 }
+@media (max-width: 599px) {
+  .header__account-text {
+    margin-top: 1rem;
+  }
+}
 
 .header__account-link {
   color: #F8FAFA;
