--- a/coursework/static/mfc/css/scss/pages-styles/add-certificate/add-certificate.css
+++ b/coursework/static/mfc/css/scss/pages-styles/add-certificate/add-certificate.css
@@ -11,6 +11,7 @@
 .certificates-wrapper {
   max-width: 114rem;
   margin: 0 auto;
+  width: 100%;
 }
 
 .certificate__text {
@@ -37,6 +38,7 @@
 .certificate {
   max-width: 114rem;
   margin: 0 auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
