--- a/coursework/static/mfc/css/scss/pages-styles/add-passport/add-passport.css
+++ b/coursework/static/mfc/css/scss/pages-styles/add-passport/add-passport.css
@@ -12,6 +12,7 @@
 .passport__form {
   max-width: 114rem;
   margin: 0 auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
