--- a/coursework/static/mfc/css/scss/pages-styles/all-services/all-services.css
+++ b/coursework/static/mfc/css/scss/pages-styles/all-services/all-services.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   width: 100%;
   background-color: #F7F7F8;
-  padding-top: 3rem;
+  padding-top: 7rem;
   min-height: 69rem;
 }
 
@@ -23,15 +23,19 @@
   padding: 0;
 }
 
+.main__list-item {
+  margin-top: 2rem;
+}
+
 .main__link {
   text-decoration: none;
-  color: #7E9C9B;
-  font-size: 1.5rem;
   font-weight: 500;
-  transition: 1s;
+  font-size: 2.2rem;
+  color: black;
+  transition: 0.15s;
 }
 
 .main__link:hover {
   opacity: 0.8;
   border-bottom: solid black 1px;
-}/*# sourceMappingURL=search.css.map */
+}/*# sourceMappingURL=all-services.css.map */
