--- a/coursework/static/mfc/css/scss/pages-styles/article/article.css
+++ b/coursework/static/mfc/css/scss/pages-styles/article/article.css
@@ -7,6 +7,7 @@
 .article {
   max-width: 114rem;
   margin: 0 auto;
+  width: 100%;
   position: relative;
   padding-left: 2rem;
   padding-right: 2rem;
