--- a/coursework/static/mfc/css/scss/pages-styles/edit-article/edit-article.css
+++ b/coursework/static/mfc/css/scss/pages-styles/edit-article/edit-article.css
@@ -6,10 +6,12 @@
 .edit-article {
   max-width: 114rem;
   margin: 0 auto;
+  width: 100%;
 }
 
 .form__submit {
-  margin-top: 2rem;
+  margin: 2rem;
+  margin-left: 50%;
   border-radius: 0.5rem;
   background-color: #EA6C43;
   color: #F8FAFA;
@@ -18,12 +20,14 @@
   border: 0;
   height: 3.3rem;
   transition: 0.5s;
+  transform: translateX(-50%);
 }
 
 .edit-article__form-wrapper {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
   padding-top: 11rem;
+  padding-bottom: 2.5rem;
   max-width: 144rem;
   margin: 0 auto;
   width: 100%;
@@ -46,7 +50,12 @@
   border: 0;
   border-radius: 0.5rem;
   background-color: white;
+  max-width: 139rem;
   width: 100%;
   height: 3.3rem;
   color: #203060;
+}
+
+.form__input--role_body {
+  height: 40rem;
 }/*# sourceMappingURL=edit-article.css.map */
