--- a/coursework/static/mfc/css/scss/pages-styles/edit-article/edit-article.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/edit-article/edit-article.scss
@@ -10,7 +10,8 @@
 }
 
 .form__submit {
-    margin-top: 2rem;
+    margin: 2rem;
+    margin-left: 50%;
     border-radius: 0.5rem;
     background-color: utils.$orange-color;
     color: utils.$white-color;
@@ -19,12 +20,14 @@
     border: 0;
     height: 3.3rem;
     transition: 0.5s;
+    transform: translateX(-50%);
 }
 
 .edit-article__form-wrapper {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
     padding-top: 11rem;
+    padding-bottom: 2.5rem;
     @include utils.wrapper;
 }
 
@@ -46,7 +49,12 @@
     border: 0;
     border-radius: 0.5rem;
     background-color: white;
+    max-width: 139rem;
     width: 100%;
     height: 3.3rem;
     color: #203060;
+}
+
+.form__input--role_body {
+    height: 40rem;
 }
