--- a/coursework/static/mfc/css/scss/pages-styles/home/_main-article.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/home/_main-article.scss
@@ -31,9 +31,18 @@
 
 .main-article-edit {
     position: absolute;
-    bottom: 6rem;
+    bottom: 4rem;
+    text-decoration: none;
+    font-weight: utils.$font-size-medium;
+    color: utils.$dark-gray;
+    transition: 0.5s;
+    border-bottom: solid utils.$light-red 0.1rem;
 }
 
+.main-article-edit:hover {
+    border-bottom: solid utils.$base-color-dark 0.1rem;
+    color: utils.$base-color-dark;
+}
 
 .article {
     transition: 0.5s;
