--- a/coursework/static/mfc/css/scss/pages-styles/show-passport/show-passport.css
+++ b/coursework/static/mfc/css/scss/pages-styles/show-passport/show-passport.css
@@ -7,6 +7,7 @@
 .passport-wrapper {
   max-width: 114rem;
   margin: 0 auto;
+  width: 100%;
   min-height: 72vh;
   margin-top: 5rem;
   padding-left: 2rem;
